# vyatsu_applicant_bot

./: .dockerignore  .env.test  .env.test.local  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.migration  Dockerfile.vector_db  README-ru.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-arq.txt  requirements-bot.txt  requirements-db.txt  requirements-migration.txt  requirements-test.txt  requirements.txt  setup.py  Диплом.docx  Отчет.docx  Презентация.pptx
.github/workflows/: test.yml
reports/: TODO.txt  ВКР_ФИб4_ОщепковДО.docx  Диплом.docx  Замечания  ПрезентацияОщепковДО.pptx  Реферат.docx
src/shared/: models.py
src/tactic/: settings.py
src/tactic/application/: get_all_contest_types.py  get_all_education_levels.py  get_all_study_forms.py  get_categories.py  get_eligible_program_ids_use_case.py  get_filtered_programs.py  get_questions.py  get_questions_category_tree.py  recognize_exam.py
src/tactic/application/common/: fabrics.py  repositories.py
src/tactic/application/services/: message_sender.py  notification_sheduling_service.py  recognize_exam.py  recognize_program.py
src/tactic/application/use_cases/: get_filtered_contest_type.py  get_filtered_programs.py  get_filtered_study_forms.py  get_list_subsriptions.py  get_questions.py  get_questions_by_category_id.py  get_sheduled_notification_by_subscription.py  get_timeline_event.py  recognize_exam.py  recognize_program.py  send_notification.py  subscribe_for_program.py  unsubscrib_from_program.py
src/tactic/domain/entities/: category.py  category_node_model.py  contest_type.py  education_level.py  exam.py  notification_subscription.py  program.py  question.py  sheduled_notification.py  study_form.py  subject.py  timeline_event.py  timeline_event_name.py  timeline_type.py
src/tactic/infrastructure/: config_loader.py  fuzzy_wuzzy_recognizer_factory.py  notificaton_message_sheduling_service.py  rate_limited_bot.py  recognize_exam_fuzzy_wuzzy.py  recognize_exam_rapid_wuzzy.py  recognize_exam_rapid_wuzzy_factory.py  recognize_program_rapid_wuzzy.py
src/tactic/infrastructure/db/: models.py
src/tactic/infrastructure/middlewares/: antiflood_middlewares.py
src/tactic/infrastructure/qdrant/: load_faq_collection.py
src/tactic/infrastructure/repositories/: base_repository.py  cache_config.py  category_repository.py  contest_type_repository.py  (+14 more)
src/tactic/presentation/: bot.py  create_ioc.py  interactor_factory.py  ioc.py
src/tests/: conftest.py  settings.py
src/tests/application/: test_get_list_subscriptions.py  test_get_sheduled_notification_by_subscription.py
src/tests/infrastructure/: test_rate_limited_bot.py
src/vector_db_service/: .dockerignore  _pyproject.toml  healthcheck.sh
src/vector_db_service/app/: api.py  embedding_model.py  load_collection.py  load_program_collection.py  load_question_collection.py  main.py  models.py  qdrant_client.py  question_repository.py  settings.py
vector_db_service/: .dockerignore  Dockerfile  Dockerfile.vector_db  pyproject.toml  requirements-db.txt
vector_db_service/app/: api.py  embedding_model.py  faq_with_path.json  get_config.py  load_collection.py  main.py  models.py  qdrant_client.py  settings.py
(+68 files in other folders)
