[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'tactic'
version = '1.0.0'
description = 'A tactic - implementation of clean architecture on Python contains some tactical patterns from DDD'
readme = 'README.md'
requires-python = '>=3.10.8'
dependencies = []  # Пусто или общие базовые

[project.optional-dependencies]
bot = [
    "SQLAlchemy==2.0.37",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "aiogram==3.17.0",

    "aiogram-dialog==2.3.1",
    "redis==5.2.1",
    "aioredis==2.0.1"
]
migration = [
    "SQLAlchemy==2.0.37",
    "asyncpg==0.30.0",
    "alembic==1.14.1"
]


[tool.setuptools]
package-dir = {"" = "src"}

[[project.authors]]
name = 'DimaOshchepkov'
email = 'odo.2003@yandex.ru'
