[build-system]
requires = [
    'setuptools==68.1.2',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'tactic'
version = '1.0.0'
description = 'A tactic - implementation of clean architecture on Python contains some tactical patterns from DDD'
readme = 'README.md'
requires-python = '>=3.13.3'
dependencies = []  


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "shared"]

[tool.mypy]
exclude = "^build/"

[[project.authors]]
name = 'DimaOshchepkov'
email = 'odo.2003@yandex.ru'
