[project]
name = "vector-db-service"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12"

dependencies = [
    "sentence-transformers==4.1.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "qdrant-client==1.13.3",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "hf-xet==1.0.3",
    "requests==2.32.3"
]

[project.optional-dependencies]
# если нужно — можно добавить dev-зависимости
# dev = ["pytest", "black"]

[project.urls]
# Например, можно указать ссылку на репозиторий или документацию
# homepage = "https://example.com"
# repository = "https://github.com/your-name/vector-db-service"

[tool.setuptools.packages.find]
where = ["app"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
